@@ -4,6 +4,7 @@
     * Add a Daily Tip
     * fix the bug 'no apt' in Fedora
     * Add device viewer :Hardware Lister
+    * Add function of 'Gnome Control Center' shows in menu
 
 2010-04-26 Homer Xing <homer.xing@gmail.com>
 
